<resources>
    <string name="app_name">Linebacker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="device_description">Record telemarketing phone calls</string>
    <string name="device_admin_label">Linebacker</string>
    <string name="list_play_your_recorded_call">play your recorded call</string>
    <string name="list_send_your_recorded_call">send your recorded call</string>
    <string name="list_erase_your_recorded_call">erase your recorded call</string>
    <string name="receiver_start_call">Start record call</string>
    <string name="receiver_end_call">End Record call</string>
    <string name="confirm_delete_title">Alert Dialog</string>
    <string name="confirm_delete_text">Are you sure you want to delete this recording?</string>
    <string name="confirm_delete_yes">yes</string>
    <string name="confirm_delete_no">no</string>
    <string name="options_title">Options Title</string>
    <string name="options_delete">Delete</string>
    <string name="confirm_play">Play</string>
    <string name="confirm_send">Send</string>
    <string name="sendMail_subject">Your record from your phone</string>
    <string name="sendMail_body">This is a call record from your phone</string>
    <string name="about_title">About</string>
    <string name="about_content">Call recorder by Kobi Krasnoff</string>
    <string name="about_close_button">Close</string>
    <string name="send_mail">Send Mail</string>
    <string name="withheld_number">Withheld Number</string>
    <string name="menu_record_is_now_enabled">The application is now enable to record calls</string>
    <string name="menu_record_is_now_disabled">The application is now not enable to record calls</string>
    <string name="no_records_message">There are no recordings in this phone.\nTo enable record ability open the main menu and choose \"Enable Record\".\nAfter that the application will record all your incoming and outgoing calls.</string>
    <string name="radio_Enable_record">Enable Record</string>
    <string name="radio_Disable_record">Disable Record</string>
    <string name="textview_startup">Please choose if the application will record your calls.\nYou can always alter your choosing by pressing the Android menu button.</string>
    <string name="dialog_welcome_screen">Welcome Screen</string>
    <string name="dialog_no_memory">There is no memory card in your device.\nPlease install one.</string>
    <string name="dialog_close">Close</string>
    <string name="menu_terms">terms of use</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="dialog_terms">Terms of use</string>
    <string name="dialog_privacy">Privacy Policy</string>
    <string name="dialog_privacy_terms">Please click the buttons below to see the terms of use and privacy policy</string>
    <string name="menu_delete_all">Delete All recordings</string>
    <string name="dialog_delete_all_title">Alert Message</string>
    <string name="dialog_delete_all_content">Are you sure you want to delete all of your recordings?</string>
    <string name="dialog_delete_all_yes">Yes</string>
    <string name="dialog_delete_all_no">No</string>
    <string name="notification_ticker">Recording is now Starting</string>
    <string name="notification_title">The phone is now recording the conversation</string>
    <string name="notification_text">The phone will stop the recording when the conversation will end</string>
    <string name="notification_new_audio_recorded">Linebacker: New audio recorded</string>
    <string name="record_impossible">Unfortunately, it is not possible to record calls in this device.</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_user">Register</string>
    <string name="action_create_pbx_account">Create VOIP account</string>
    <string name="action_password_recovery">Forgot your password?</string>
    <string name="action_give_app_permissions">Problem giving app permissions?</string>
    <string name="action_delete_user">Delete User</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_recording_details">RECORDING DETAILS</string>
    <string name="title_activity_recording_log">CALL LOG</string>
    <string name="title_activity_record_voice_message">RECORD VOICE MESSAGE</string>
    <string name="login_successful">Login Successful</string>
    <string name="login_error">Login Error</string>
    <string name="action_settings">Settings</string>
    <string name="action_upload_contacts">Upload Contacts</string>
    <string name="action_home">Go Home</string>
    <string name="title_activity_create_case">CASE DETAILS</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_record">Record Message</string>
    <string name="action_remove_log">Remove this log</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_voicemail">Voicemail</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="audio_files_last_titles">
        <item>1 week</item>
        <item>2 weeks</item>
        <item>3 weeks</item>
        <item>4 weeks</item>
    </string-array>
    <string-array name="audio_files_last_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
</resources>